--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
 <p>Change the font for all elements on the page.</p>
 </div>
 
+<div class="cardB9" data-command="let f=prompt('Font size:', '24px');if(f){let s=document.createElement('style');s.innerHTML='*{font-size:'+f+' !important;}';document.head.appendChild(s);}">
+<h3>Change Font Size</h3>
+<p>Change the font for all elements on the page.</p>
+</div>
 
 
     <div class="cardB9" data-command="(function(){const elems=prompt('Enter CSS selector to log elements to console:','*');if(elems)console.log(document.querySelectorAll(elems));alert('Elements logged to console.');})()">
