--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       <p>Revert your last change and restore the previous state.</p>
     </div>
 
+        <div class="cardB9" data-command="const f = prompt('Border: ', 'solid dodgerblue 5px'); document.body.style.border = f;">
+      <h3>Page Border</h3>
+      <p>Add a border to the current page you are on.</p>
+    </div>
+
     <div class="cardB9" data-command="document.execCommand('redo');">
       <h3>Redo</h3>
       <p>Reapply the action you just undid to continue editing.</p>
@@ -116,8 +121,6 @@
   <h3>Spin Elements</h3>
   <p>Spin all elements continuously until ESC is pressed.</p>
 </div>
-
-
 
 
 
