--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
       <p>Change the &lt;body&gt;'s padding for the current page you are on.</p>
     </div>
 
+     <div class="cardB9" data-command="const f = prompt('Margin: ', '24px'); document.body.style.margin = f;">
+      <h3>Page Margin</h3>
+      <p>Change the &lt;body&gt;'s margin for the current page you are on.</p>
+    </div> 
+
     <div class="cardB9" data-command="document.execCommand('redo');">
       <h3>Redo</h3>
       <p>Reapply the action you just undid to continue editing.</p>
@@ -358,3 +363,4 @@ Change the cursor on the current page.</p>
 
 </body>
 </html>
+>
