--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
       <p>Change the &lt;body&gt;'s padding for the current page you are on.</p>
     </div>
 
-     <div class="cardB9" data-command="const f = prompt('Margin: ', '24px'); document.body.style.margin = f;">
-      <h3>Page Margin</h3>
-      <p>Change the &lt;body&gt;'s margin for the current page you are on.</p>
-    </div> 
+     <!-- Page margin <div class="cardB9" data-command="const f = prompt('Padding: ', '24px'); document.body.style.padding = f;">
+      <h3>Page Padding</h3>
+      <p>Change the &lt;body&gt;'s padding for the current page you are on.</p>
+    </div> -->
 
     <div class="cardB9" data-command="document.execCommand('redo');">
       <h3>Redo</h3>
@@ -363,4 +363,3 @@ Change the cursor on the current page.</p>
 
 </body>
 </html>
->
