--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 </div>
 
 
-    <div class="cardB9" data-command="(function(){const el=prompt('Enter CSS selector to show again:');if(el)document.querySelectorAll(el).forEach(e=>e.style.display='');})()">
+    <div class="cardB9" data-command="(function(){const el=prompt('Enter CSS selector to show:', '*');if(el)document.querySelectorAll(el).forEach(e=>e.style.display='');})()">
       <h3>Show Elements</h3>
       <p>Reveal elements hidden on the page.</p>
     </div>
