--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 </div>
 
 <div class="inputContainerF1">
-  <input class="commandInputT5" type="text" placeholder="Execute a command...">
+  <input class="commandInputT5" id="commandInput" type="text" placeholder="Execute a command...">
 </div>
 
 <script src="script.js"></script>
